# PerovSimul2

./: README.md  geant4_lxplus.sh
simplesetup/: CMakeLists.txt  run.in  simplesetup.cc  visandrun.mac
simplesetup/include/: SimpleActionInitialization.hh  SimpleAnalysisManager.hh  SimpleDetectorConstruction.hh  SimpleEnergyDeposition.hh  SimpleEventAction.hh  SimpleHisto.hh  SimplePhysListParticles.hh  SimplePhysicsList.hh  SimplePrimaryGeneratorAction.hh  SimpleRun.hh  SimpleRunAction.hh  SimpleSteppingAction.hh
simplesetup/src/: SimpleActionInitialization.cc  SimpleAnalysisManager.cc  SimpleDetectorConstruction.cc  SimpleEnergyDeposition.cc  SimpleEventAction.cc  SimpleHisto.cc  SimplePhysListParticles.cc  SimplePhysicsList.cc  SimplePrimaryGeneratorAction.cc  SimpleRun.cc  SimpleRunAction.cc  SimpleSteppingAction.cc
